force-app/main/default/objects/Subscribed_Solutions__c/Subscribed_Solutions__c.object-meta.xml
<CustomObject>
    <description>OneHub: This object is used to manage the Solutions a user has signed up for and create the tile on the dashboard.</description>
    <label>Subscribed Solution</label>
    <nameField>
        <displayFormat>SS{00000}</displayFormat>
        <label>Subscribed Solutions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribed Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>