force-app/main/default/objects/Subscribed_Solutions__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OneHub: This field stores which contact the Solution is linked to. (US-4712)</description>
    <inlineHelpText>Search for the Contact to link to this record.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscribed Solutions</relationshipLabel>
    <relationshipName>Subscribed_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>