force-app/main/default/objects/Subscribed_Solutions__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OneHub: This field stores which Knowledge Article the Solution is linked to.(US-4712)</description>
    <inlineHelpText>Search for the Knowledge Article to link to this record.</inlineHelpText>
    <label>Solution</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Subscribed Solutions</relationshipLabel>
    <relationshipName>Subscribed_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>