force-app/main/default/objects/Subscribed_Solutions__c/fields/Solution_Id__c.field-meta.xml
<CustomField>
    <fullName>Solution_Id__c</fullName>
    <description>OneHub: This field will store the Knowledge ID.(US-4712)</description>
    <label>Solution Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>