force-app/main/default/objects/Subscribed_Solutions__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OneHub: This field stores which User  the Solution is linked to.(US-4712)</description>
    <inlineHelpText>Search for the User to link to this record.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscribed_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>